...
            android:orientation="vertical"
            tools:ignore="MissingConstraints">



            <TextView
                android:id="@+id/textView_TBR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="ULC TBR"
                android:textSize="18sp"
                android:textColor="@color/black"
...

                    android:text="MENU ">

                </TextView>

                <Spinner
                    android:id="@+id/spinner_homeMenu"
                    android:layout_width="136dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp" />

            </LinearLayout>

...
                    android:text="My Classes"
                    android:layout_marginTop="50dp">

                </TextView>

                <ListView
                    android:id="@+id/listView_myClasses"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/border"
                    >
                </ListView>

                <Button
                    android:id="@+id/button_removeTutorClasses"
                    android:layout_width="227dp"
                    android:layout_height="43dp"
                    android:layout_marginBottom="16dp"
                    android:text="Remove Classes"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
...
                    android:text="Available Classes"
                    android:layout_marginTop="25dp">

                </TextView>

                <ListView
                    android:id="@+id/listView_availableClasses"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/border"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </ListView>

                <Button
                    android:id="@+id/button_addTutorClasses"
                    android:layout_width="227dp"
                    android:layout_height="43dp"
                    android:layout_marginBottom="16dp"
                    android:text="Add Classes"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
...
